Changes for 1.8.3

 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (asaveljevs, Richlv)
 - [ZBX-2616] bundled DejaVu font upgraded from 2.30 to 2.31 (Richlv)
 - [ZBX-2562] improved sessions store (Aly)
 - [ZBXNEXT-424] enhanced status of trigger filter (Vedmak)
 - [ZBX-2599] fixed processing of hexadecimal or octal data by proxy (Sasha)
 - [ZBX-2597] fixed processing of telnet results with long prompts (Sasha)
 - [ZBX-2595] fixed logformat field showing (Maxim Andruhovich / AM)
 - [ZBX-2593] fixed possibility to copy item between templates that are linked to same host (Vedmak)
 - [ZBX-2585] removed spaces from charts title & fixed date format for chart4.php (Maxim Andruhovich / AM)
 - [ZBX-2592] added support of comma character (,) for scripts in action remote commands (Sasha)
 - [ZBX-2575] removed outdated and undocumented environment variables from alert scripts (asaveljevs)
 - [ZBX-2574] improved fixed graph Y axis measurement (Aly)
 - [ZBX-2576] small text changes in administration/audit (Vedmak)
 - [ZBX-1857] fixed item form correct processing, removed refreshing when item type is changed (Maxim Andruhovich / AM)
 - [ZBX-2528] fixed default language loading before using phrases, warning messages removed which were displayed after login (Maxim Andruhovich / AM)
 - [ZBXNEXT-343] added possibility to unlink and clear templates when mass update hosts templates (Vedmak)
 - [ZBX-1930] all top indents of icon labels now is equal (Maxim Andruhovich / AM)
 - [ZBX-2152] fixed names of SNMPv3 security levels (asaveljevs)
 - [ZBX-2563] fixed warnings in m4/libunixodbc.m4 with newer autotools (asaveljevs)
 - [ZBX-2543] fixed password reset when edit user profile and auth type is not internal (Vedmak)
 - [ZBX-2524] fixed deleting media types (Aly)
 - [ZBX-2557] fixed incorrect message when add proxy with name that already exist (Vedmak)